--- a/app/src/main/res/layout/list_message.xml
+++ b/app/src/main/res/layout/list_message.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
@@ -25,5 +25,5 @@
             android:drawablePadding="6dp"
             android:text="TextView"
             android:textSize="16sp" />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
